tests/src/frontend/syntax/invalid/empty_parens.sk
fun foo(): void {
  { _ = 42; () }
}

fun main(): String {
  "fail"
}
